fixed overflow on mobile devices

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -14,6 +14,7 @@ html, body
 #app
   display: flex
   flex-direction: column
+  overflow-x: hidden
 
 ::-webkit-scrollbar
   width: 5px
